--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
 after_script:
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-report.py builds/build
 - rm -rf builds/build/sources
 - rm -rf builds/build/build.state.yaml
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
     secure: Q0QcGgm+qa9m949khFtYQLDbf8MU3a4wQzYSZ5LU+qnC+9CF93d43LgC0hhfcqeHtpZX7cMmr1luYTHzxdIyYppU9hxvZiS/ne67mr6FiWZN9UoXyYzvhWKoyAXmke22kjjnTvqznApJbxt4qwMjl2fGA4LvQ7UsweY8QdDoz6U=
